--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 
 main {
   width: 80%;
+  max-width: 1000px;
   display: flex;
   flex-wrap: wrap;
   padding: 2rem;
@@ -216,6 +217,9 @@ main {
   color: var(--white);
 }
 
+
+/* -------- media ----------*/
+
 @media (max-width: 1100px) {
   html {
     font-size: 75%;
@@ -309,6 +313,20 @@ main {
   transform: none;
   }
 }
+
+@media (min-width: 1600px){
+  html{
+    font-size: 112.5%;
+  }
+
+  main {
+    width: 70%;
+    max-width: 1250px;
+  }
+}
+
+
+/* -------- Keyframes ----------*/
 
 @keyframes fromRight {
 
